Styles and Navigation Bar

--- a/pages/gastronomy.html
+++ b/pages/gastronomy.html
@@ -15,6 +15,16 @@
     </div>
   </header>
 
+    <nav>
+    <ul>
+      <li><a href="../index.html">Inicio</a></li>
+      <li><a href="history.html">Historia</a></li>
+      <li><a href="tourism.html">Turismo</a></li>
+      <li><a class="active" href="gastronomy.html">Gastronomía</a></li>
+      <li><a href="festivities.html">Festividades</a></li>
+    </ul>
+  </nav>
+
   <main>
     <div class="grid">
       <!-- CONTENIDO PRINCIPAL -->
